{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 148,
  "lineage": "ab807f23-5cb1-b440-a126-9419061f18d8",
  "resources": [
    {
      "module": "module.gke_service_account.module.vpc_network.module.network_firewall",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "private_subnetwork",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.3.16.1",
            "id": "europe-west2/magento-private-cluster-network-jpor-subnetwork-private",
            "ip_cidr_range": "10.3.16.0/20",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/magento-private-cluster-network-jpor-network",
            "private_ip_google_access": true,
            "project": "magento2-269418",
            "region": "europe-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.16.0/20",
                "range_name": "private-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/regions/europe-west2/subnetworks/magento-private-cluster-network-jpor-subnetwork-private"
          }
        }
      ]
    },
    {
      "module": "module.gke_cluster.module.vpc_network.module.network_firewall",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "private_subnetwork",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.3.16.1",
            "id": "europe-west2/magento-private-cluster-network-qmng-subnetwork-private",
            "ip_cidr_range": "10.3.16.0/20",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/magento-private-cluster-network-qmng-network",
            "private_ip_google_access": true,
            "project": "magento2-269418",
            "region": "europe-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.16.0/20",
                "range_name": "private-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/regions/europe-west2/subnetworks/magento-private-cluster-network-qmng-subnetwork-private"
          }
        }
      ]
    },
    {
      "module": "module.vpc_network.module.vpc_network.module.network_firewall",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "private_subnetwork",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.3.16.1",
            "id": "europe-west2/magento-private-cluster-network-hnmj-subnetwork-private",
            "ip_cidr_range": "10.3.16.0/20",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/magento-private-cluster-network-hnmj-network",
            "private_ip_google_access": true,
            "project": "magento2-269418",
            "region": "europe-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.16.0/20",
                "range_name": "private-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/regions/europe-west2/subnetworks/magento-private-cluster-network-hnmj-subnetwork-private"
          }
        }
      ]
    },
    {
      "module": "module.gke_service_account.module.vpc_network.module.network_firewall",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "public_subnetwork",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.3.0.1",
            "id": "europe-west2/magento-private-cluster-network-jpor-subnetwork-public",
            "ip_cidr_range": "10.3.0.0/20",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/magento-private-cluster-network-jpor-network",
            "private_ip_google_access": true,
            "project": "magento2-269418",
            "region": "europe-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.0.0/20",
                "range_name": "public-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/regions/europe-west2/subnetworks/magento-private-cluster-network-jpor-subnetwork-public"
          }
        }
      ]
    },
    {
      "module": "module.gke_cluster.module.vpc_network.module.network_firewall",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "public_subnetwork",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.3.0.1",
            "id": "europe-west2/magento-private-cluster-network-qmng-subnetwork-public",
            "ip_cidr_range": "10.3.0.0/20",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/magento-private-cluster-network-qmng-network",
            "private_ip_google_access": true,
            "project": "magento2-269418",
            "region": "europe-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.0.0/20",
                "range_name": "public-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/regions/europe-west2/subnetworks/magento-private-cluster-network-qmng-subnetwork-public"
          }
        }
      ]
    },
    {
      "module": "module.vpc_network.module.vpc_network.module.network_firewall",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "public_subnetwork",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.3.0.1",
            "id": "europe-west2/magento-private-cluster-network-hnmj-subnetwork-public",
            "ip_cidr_range": "10.3.0.0/20",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/magento-private-cluster-network-hnmj-network",
            "private_ip_google_access": true,
            "project": "magento2-269418",
            "region": "europe-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.0.0/20",
                "range_name": "public-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/regions/europe-west2/subnetworks/magento-private-cluster-network-hnmj-subnetwork-public"
          }
        }
      ]
    },
    {
      "module": "module.gke_service_account.module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private_allow_all_network_inbound",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2020-05-19T02:47:08.565-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "magento-private-cluster-network-jpor-private-allow-ingress",
            "name": "magento-private-cluster-network-jpor-private-allow-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/magento-private-cluster-network-jpor-network",
            "priority": 1000,
            "project": "magento2-269418",
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/firewalls/magento-private-cluster-network-jpor-private-allow-ingress",
            "source_ranges": [
              "10.3.0.0/20",
              "10.3.16.0/20",
              "10.4.0.0/20",
              "10.4.16.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "private"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.gke_service_account.module.vpc_network.google_compute_network.vpc",
            "module.gke_service_account.module.vpc_network.google_compute_subnetwork.vpc_subnetwork_private",
            "module.gke_service_account.module.vpc_network.google_compute_subnetwork.vpc_subnetwork_public",
            "module.gke_service_account.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.gke_cluster.module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private_allow_all_network_inbound",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2020-05-19T02:47:08.685-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "magento-private-cluster-network-qmng-private-allow-ingress",
            "name": "magento-private-cluster-network-qmng-private-allow-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/magento-private-cluster-network-qmng-network",
            "priority": 1000,
            "project": "magento2-269418",
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/firewalls/magento-private-cluster-network-qmng-private-allow-ingress",
            "source_ranges": [
              "10.3.0.0/20",
              "10.3.16.0/20",
              "10.4.0.0/20",
              "10.4.16.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "private"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.gke_cluster.module.vpc_network.google_compute_network.vpc",
            "module.gke_cluster.module.vpc_network.google_compute_subnetwork.vpc_subnetwork_private",
            "module.gke_cluster.module.vpc_network.google_compute_subnetwork.vpc_subnetwork_public",
            "module.gke_cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network.module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private_allow_all_network_inbound",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2020-05-19T02:47:12.758-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "magento-private-cluster-network-hnmj-private-allow-ingress",
            "name": "magento-private-cluster-network-hnmj-private-allow-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/magento-private-cluster-network-hnmj-network",
            "priority": 1000,
            "project": "magento2-269418",
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/firewalls/magento-private-cluster-network-hnmj-private-allow-ingress",
            "source_ranges": [
              "10.3.0.0/20",
              "10.3.16.0/20",
              "10.4.0.0/20",
              "10.4.16.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "private"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc_network.module.vpc_network.google_compute_network.vpc",
            "module.vpc_network.module.vpc_network.google_compute_subnetwork.vpc_subnetwork_private",
            "module.vpc_network.module.vpc_network.google_compute_subnetwork.vpc_subnetwork_public",
            "module.vpc_network.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.gke_service_account.module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private_allow_restricted_network_inbound",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2020-05-19T02:46:30.835-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "magento-private-cluster-network-jpor-allow-restricted-inbound",
            "name": "magento-private-cluster-network-jpor-allow-restricted-inbound",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/magento-private-cluster-network-jpor-network",
            "priority": 1000,
            "project": "magento2-269418",
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/firewalls/magento-private-cluster-network-jpor-allow-restricted-inbound",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "private",
              "private-persistence"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "private-persistence"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.gke_service_account.module.vpc_network.google_compute_network.vpc",
            "module.gke_service_account.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.gke_cluster.module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private_allow_restricted_network_inbound",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2020-05-19T02:46:37.152-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "magento-private-cluster-network-qmng-allow-restricted-inbound",
            "name": "magento-private-cluster-network-qmng-allow-restricted-inbound",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/magento-private-cluster-network-qmng-network",
            "priority": 1000,
            "project": "magento2-269418",
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/firewalls/magento-private-cluster-network-qmng-allow-restricted-inbound",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "private",
              "private-persistence"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "private-persistence"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.gke_cluster.module.vpc_network.google_compute_network.vpc",
            "module.gke_cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network.module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private_allow_restricted_network_inbound",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2020-05-19T02:46:38.669-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "magento-private-cluster-network-hnmj-allow-restricted-inbound",
            "name": "magento-private-cluster-network-hnmj-allow-restricted-inbound",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/magento-private-cluster-network-hnmj-network",
            "priority": 1000,
            "project": "magento2-269418",
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/firewalls/magento-private-cluster-network-hnmj-allow-restricted-inbound",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "private",
              "private-persistence"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "private-persistence"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc_network.module.vpc_network.google_compute_network.vpc",
            "module.vpc_network.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.gke_service_account.module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "public_allow_all_inbound",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2020-05-19T02:46:30.860-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "magento-private-cluster-network-jpor-public-allow-ingress",
            "name": "magento-private-cluster-network-jpor-public-allow-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/magento-private-cluster-network-jpor-network",
            "priority": 1000,
            "project": "magento2-269418",
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/firewalls/magento-private-cluster-network-jpor-public-allow-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "public"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.gke_service_account.module.vpc_network.google_compute_network.vpc",
            "module.gke_service_account.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.gke_cluster.module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "public_allow_all_inbound",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2020-05-19T02:46:36.279-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "magento-private-cluster-network-qmng-public-allow-ingress",
            "name": "magento-private-cluster-network-qmng-public-allow-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/magento-private-cluster-network-qmng-network",
            "priority": 1000,
            "project": "magento2-269418",
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/firewalls/magento-private-cluster-network-qmng-public-allow-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "public"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.gke_cluster.module.vpc_network.google_compute_network.vpc",
            "module.gke_cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network.module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "public_allow_all_inbound",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2020-05-19T02:46:39.015-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "magento-private-cluster-network-hnmj-public-allow-ingress",
            "name": "magento-private-cluster-network-hnmj-public-allow-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/magento-private-cluster-network-hnmj-network",
            "priority": 1000,
            "project": "magento2-269418",
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/firewalls/magento-private-cluster-network-hnmj-public-allow-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "public"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc_network.module.vpc_network.google_compute_network.vpc",
            "module.vpc_network.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network.module.vpc_network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "magento-private-cluster-network-hnmj-network",
            "name": "magento-private-cluster-network-hnmj-network",
            "project": "magento2-269418",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/magento-private-cluster-network-hnmj-network"
          },
          "dependencies": [
            "module.vpc_network.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.gke_cluster.module.vpc_network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "magento-private-cluster-network-qmng-network",
            "name": "magento-private-cluster-network-qmng-network",
            "project": "magento2-269418",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/magento-private-cluster-network-qmng-network"
          },
          "dependencies": [
            "module.gke_cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.gke_service_account.module.vpc_network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "magento-private-cluster-network-jpor-network",
            "name": "magento-private-cluster-network-jpor-network",
            "project": "magento2-269418",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/magento-private-cluster-network-jpor-network"
          },
          "dependencies": [
            "module.gke_service_account.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network.module.vpc_network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "vpc_router",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-05-19T02:46:33.396-07:00",
            "id": "europe-west2/magento-private-cluster-network-hnmj-router",
            "name": "magento-private-cluster-network-hnmj-router",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/magento-private-cluster-network-hnmj-network",
            "project": "magento2-269418",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/regions/europe-west2/routers/magento-private-cluster-network-hnmj-router"
          },
          "dependencies": [
            "module.vpc_network.module.vpc_network.google_compute_network.vpc",
            "module.vpc_network.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.gke_cluster.module.vpc_network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "vpc_router",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-05-19T02:46:32.398-07:00",
            "id": "europe-west2/magento-private-cluster-network-qmng-router",
            "name": "magento-private-cluster-network-qmng-router",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/magento-private-cluster-network-qmng-network",
            "project": "magento2-269418",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/regions/europe-west2/routers/magento-private-cluster-network-qmng-router"
          },
          "dependencies": [
            "module.gke_cluster.module.vpc_network.google_compute_network.vpc",
            "module.gke_cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.gke_service_account.module.vpc_network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "vpc_router",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-05-19T02:46:30.967-07:00",
            "id": "europe-west2/magento-private-cluster-network-jpor-router",
            "name": "magento-private-cluster-network-jpor-router",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/magento-private-cluster-network-jpor-network",
            "project": "magento2-269418",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/regions/europe-west2/routers/magento-private-cluster-network-jpor-router"
          },
          "dependencies": [
            "module.gke_service_account.module.vpc_network.google_compute_network.vpc",
            "module.gke_service_account.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network.module.vpc_network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "vpc_nat",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "magento2-269418/europe-west2/magento-private-cluster-network-hnmj-router/magento-private-cluster-network-hnmj-nat",
            "min_ports_per_vm": 0,
            "name": "magento-private-cluster-network-hnmj-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "magento2-269418",
            "region": "europe-west2",
            "router": "magento-private-cluster-network-hnmj-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/magento2-269418/regions/europe-west2/subnetworks/magento-private-cluster-network-hnmj-subnetwork-public",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.vpc_network.module.vpc_network.google_compute_network.vpc",
            "module.vpc_network.module.vpc_network.google_compute_router.vpc_router",
            "module.vpc_network.module.vpc_network.google_compute_subnetwork.vpc_subnetwork_public",
            "module.vpc_network.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.gke_cluster.module.vpc_network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "vpc_nat",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "magento2-269418/europe-west2/magento-private-cluster-network-qmng-router/magento-private-cluster-network-qmng-nat",
            "min_ports_per_vm": 0,
            "name": "magento-private-cluster-network-qmng-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "magento2-269418",
            "region": "europe-west2",
            "router": "magento-private-cluster-network-qmng-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/magento2-269418/regions/europe-west2/subnetworks/magento-private-cluster-network-qmng-subnetwork-public",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.gke_cluster.module.vpc_network.google_compute_network.vpc",
            "module.gke_cluster.module.vpc_network.google_compute_router.vpc_router",
            "module.gke_cluster.module.vpc_network.google_compute_subnetwork.vpc_subnetwork_public",
            "module.gke_cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.gke_service_account.module.vpc_network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "vpc_nat",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "magento2-269418/europe-west2/magento-private-cluster-network-jpor-router/magento-private-cluster-network-jpor-nat",
            "min_ports_per_vm": 0,
            "name": "magento-private-cluster-network-jpor-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "magento2-269418",
            "region": "europe-west2",
            "router": "magento-private-cluster-network-jpor-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/magento2-269418/regions/europe-west2/subnetworks/magento-private-cluster-network-jpor-subnetwork-public",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.gke_service_account.module.vpc_network.google_compute_network.vpc",
            "module.gke_service_account.module.vpc_network.google_compute_router.vpc_router",
            "module.gke_service_account.module.vpc_network.google_compute_subnetwork.vpc_subnetwork_public",
            "module.gke_service_account.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network.module.vpc_network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork_private",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-05-19T02:46:35.006-07:00",
            "enable_flow_logs": true,
            "fingerprint": "MK6EVFwmi54=",
            "gateway_address": "10.3.16.1",
            "id": "europe-west2/magento-private-cluster-network-hnmj-subnetwork-private",
            "ip_cidr_range": "10.3.16.0/20",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "magento-private-cluster-network-hnmj-subnetwork-private",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/magento-private-cluster-network-hnmj-network",
            "private_ip_google_access": true,
            "project": "magento2-269418",
            "region": "europe-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.16.0/20",
                "range_name": "private-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/regions/europe-west2/subnetworks/magento-private-cluster-network-hnmj-subnetwork-private"
          },
          "dependencies": [
            "module.vpc_network.module.vpc_network.google_compute_network.vpc",
            "module.vpc_network.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.gke_cluster.module.vpc_network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork_private",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-05-19T02:46:32.978-07:00",
            "enable_flow_logs": true,
            "fingerprint": "elGK29LJesQ=",
            "gateway_address": "10.3.16.1",
            "id": "europe-west2/magento-private-cluster-network-qmng-subnetwork-private",
            "ip_cidr_range": "10.3.16.0/20",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "magento-private-cluster-network-qmng-subnetwork-private",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/magento-private-cluster-network-qmng-network",
            "private_ip_google_access": true,
            "project": "magento2-269418",
            "region": "europe-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.16.0/20",
                "range_name": "private-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/regions/europe-west2/subnetworks/magento-private-cluster-network-qmng-subnetwork-private"
          },
          "dependencies": [
            "module.gke_cluster.module.vpc_network.google_compute_network.vpc",
            "module.gke_cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.gke_service_account.module.vpc_network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork_private",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-05-19T02:46:31.098-07:00",
            "enable_flow_logs": true,
            "fingerprint": "ZgfSSrS8CL0=",
            "gateway_address": "10.3.16.1",
            "id": "europe-west2/magento-private-cluster-network-jpor-subnetwork-private",
            "ip_cidr_range": "10.3.16.0/20",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "magento-private-cluster-network-jpor-subnetwork-private",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/magento-private-cluster-network-jpor-network",
            "private_ip_google_access": true,
            "project": "magento2-269418",
            "region": "europe-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.16.0/20",
                "range_name": "private-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/regions/europe-west2/subnetworks/magento-private-cluster-network-jpor-subnetwork-private"
          },
          "dependencies": [
            "module.gke_service_account.module.vpc_network.google_compute_network.vpc",
            "module.gke_service_account.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network.module.vpc_network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork_public",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-05-19T02:46:33.811-07:00",
            "enable_flow_logs": true,
            "fingerprint": "OBgYvJrIHmM=",
            "gateway_address": "10.3.0.1",
            "id": "europe-west2/magento-private-cluster-network-hnmj-subnetwork-public",
            "ip_cidr_range": "10.3.0.0/20",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "magento-private-cluster-network-hnmj-subnetwork-public",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/magento-private-cluster-network-hnmj-network",
            "private_ip_google_access": true,
            "project": "magento2-269418",
            "region": "europe-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.0.0/20",
                "range_name": "public-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/regions/europe-west2/subnetworks/magento-private-cluster-network-hnmj-subnetwork-public"
          },
          "dependencies": [
            "module.vpc_network.module.vpc_network.google_compute_network.vpc",
            "module.vpc_network.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.gke_cluster.module.vpc_network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork_public",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-05-19T02:46:31.097-07:00",
            "enable_flow_logs": true,
            "fingerprint": "hTo8pIMqaV8=",
            "gateway_address": "10.3.0.1",
            "id": "europe-west2/magento-private-cluster-network-qmng-subnetwork-public",
            "ip_cidr_range": "10.3.0.0/20",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "magento-private-cluster-network-qmng-subnetwork-public",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/magento-private-cluster-network-qmng-network",
            "private_ip_google_access": true,
            "project": "magento2-269418",
            "region": "europe-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.0.0/20",
                "range_name": "public-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/regions/europe-west2/subnetworks/magento-private-cluster-network-qmng-subnetwork-public"
          },
          "dependencies": [
            "module.gke_cluster.module.vpc_network.google_compute_network.vpc",
            "module.gke_cluster.random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.gke_service_account.module.vpc_network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork_public",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-05-19T02:46:31.142-07:00",
            "enable_flow_logs": true,
            "fingerprint": "8PShGSPj0Y0=",
            "gateway_address": "10.3.0.1",
            "id": "europe-west2/magento-private-cluster-network-jpor-subnetwork-public",
            "ip_cidr_range": "10.3.0.0/20",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "magento-private-cluster-network-jpor-subnetwork-public",
            "network": "https://www.googleapis.com/compute/v1/projects/magento2-269418/global/networks/magento-private-cluster-network-jpor-network",
            "private_ip_google_access": true,
            "project": "magento2-269418",
            "region": "europe-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.0.0/20",
                "range_name": "public-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/magento2-269418/regions/europe-west2/subnetworks/magento-private-cluster-network-jpor-subnetwork-public"
          },
          "dependencies": [
            "module.gke_service_account.module.vpc_network.google_compute_network.vpc",
            "module.gke_service_account.random_string.suffix"
          ]
        }
      ]
    }
  ]
}